# RAG-indepth

./: README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-sqlparsing.ipynb
0-DataIngestParsing/data/databases/: sample.db
0-DataIngestParsing/data/docs/: doc1.docx
0-DataIngestParsing/data/json_files/: company_data.json  employees.jsonl
0-DataIngestParsing/data/struct_files/: employees.csv  sales_sample.xlsx
0-DataIngestParsing/data/text_files/: ai_overview.txt  cloud_computing.txt  python_intro.txt
1-VectorEmbeddingAndDatabases/: embedding.ipynb  huggingfaceembeddings.ipynb
2-VectorStore/: 1-chromadb.ipynb  2-faiss.ipynb
2-VectorStore/chroma_db/: chroma.sqlite3
